updated portfolio project to cyber sec

--- a/portfolio/src/pages/Experience/style.css
+++ b/portfolio/src/pages/Experience/style.css
@@ -21,3 +21,9 @@
     width: 3em;
   }
   
+  .company{
+    color: white;
+    font-size: larger;
+    font-weight: bold;
+    text-align: center;
+  }
